# CMakeExperiments

./: .gitignore  README.txt
Check_Print_OS_Params/: CMakeLists.txt  README.txt
Cmake_Params_Experiments/: CMakeLists.txt  README
Cmake_Params_Experiments/src/: CMakeLists.txt  main.cpp
Deternmine_Compiler_Type/: CMakeLists.txt  README.txt
FetchContent_Experiments/: CMakeLists.txt
Find_Libs_and_Include_Folders/: CMakeLists.txt
GIT_HUB_Actions/C++_Actions_GCC_13__1/: CMakeLists.txt
GIT_HUB_Actions/C++_Actions_GCC_13__1/.github/workflows/: unit_tests.yml
GIT_HUB_Actions/C++_Actions_GCC_13__1/src/: CLI.cpp  CLI.h  Database.cpp  WebService.cpp  WebService.h
GIT_HUB_Actions/C++_Actions_GCC_13__1/test/: CMakeLists.txt
GIT_HUB_Actions/C++_Actions_GCC_13__2/: .gitignore  README.md
GIT_HUB_Actions/C++_Actions_GCC_13__2/.github/workflows/: unit_tests.yml
GIT_HUB_Actions/C++_Actions_GCC_13__2/src/: BookingService.cpp  BookingService.h  CMakeLists.txt  Database.h  main.cpp
GIT_HUB_Actions/C++_Actions_GCC_13__2/test/: main.cpp
GenerateCerificateGetterFunctions/: CMakeLists.txt  main.cpp
GenerateCerificateGetterFunctions/test_data/certificates/: certificate.crt
Generate_SubProject_InSubFolders/: CMakeLists.txt
Generate_SubProject_InSubFolders/sub_project_one/: CMakeLists.txt
Generate_SubProject_InSubFolders/sub_project_one/sub_sub_project_three/: CMakeLists.txt
Generate_SubProject_InSubFolders/sub_project_two/: CMakeLists.txt
ListFilesInDIr/: CMakeLists.txt  README.txt  main.cpp
ListFilesInDIr/test_files/: src_1.cpp
ListHeaderFiles_GenerareIncludes/: CMakeLists.txt  main.cpp
ListHeaderFiles_GenerareIncludes/headers/: all_headers.h  header_1.h  header_2.h  header_3.h
MainProject/: CMakeLists.txt  Integer.cpp  Integer.h  main.cpp
SimpleProject/: CMakeLists.txt  README
SimpleProject/src/: CMakeLists.txt
Utilities/: CMakeLists.txt  Long.h  main.cpp
